--- a/src/views/index.html
+++ b/src/views/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://telegra.ph/file/a6c805fa9bedb33fdaf8e.jpg" rel="icon">
     <link href="https://telegra.ph/file/a6c805fa9bedb33fdaf8e.jpg" rel="apple-touch-icon">
-    <title>Shannz Store | Semua Kebutuhan Digital Elektronik</title>
+    <title>RelllZzz Store | Semua Kebutuhan Sosmed </title>
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
